@@ -1,4 +1,2 @@
 [@Milla]
--remove = GithubMeta
 installer = ModuleBuild
-[Bitbucket::Meta]
